<?xml version="1.0" encoding="utf-8"?>
<!-- 这是一个发送短信界面布局 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="@drawable/bottom_bg" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/app_name"
            android:textColor="#FFFFFF" />
    </RelativeLayout>
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
     >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goal_num"
        android:textColor="#0A0A0A"
        android:textSize="20sp"
        android:textStyle="italic"
        android:layout_margin="5dp"
         />

    <EditText
        android:id="@+id/edt_send_tel_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       
        android:layout_margin="5dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_content" 
         android:textColor="#0A0A0A"
          android:textSize="20sp"
          android:textStyle="italic"
          android:layout_margin="5dp"/>

    <EditText
        android:id="@+id/edt_send_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/btn_send_msg_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_msg_content"
        android:layout_margin="5dp" />

</LinearLayout>
</LinearLayout>