<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:background="@drawable/comm_btn_bg2_s"
        android:text="@string/choose_camera"
        android:textSize="40sp" />

    <Button
        android:id="@+id/systemCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_margin="15dp"
        android:background="@drawable/comm_btn_bg2_s"
        android:text="@string/system_camera" />

    <Button
        android:id="@+id/myCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_margin="15dp"
        android:background="@drawable/comm_btn_bg2_s"
        android:text="@string/my_camera" />

    <ImageView
        android:id="@+id/chooseback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
     android:background="@drawable/back"
        android:layout_margin="15dp" />

</RelativeLayout>