<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/menu_title"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/txt_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/a_name"
        android:textSize="70sp" 
        android:visibility="gone"
        />
   <edu.feicui.assistant.view.DigitalClock 
     android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
    />
    <TextView
        android:id="@+id/txt_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/a_name"
        android:textSize="20dp" />

   

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/start_clock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/settime"
            android:text="@string/start_clock"
            android:textSize="25sp"
            android:textStyle="bold" 
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/setting_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/settime"
            android:text="@string/setting_time"
            android:textSize="25sp"
            android:textStyle="bold" 
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"/>

        <AnalogClock
            android:id="@+id/analogClock1"
            android:layout_width="400dp"
            android:layout_height="400dp"
            android:layout_above="@+id/setting_time"
            android:layout_centerHorizontal="true" />

      <TimePicker
          android:id="@+id/tpk"
          android:layout_width="wrap_content"
          android:layout_height="200dp"
          android:layout_alignParentTop="true"
          android:layout_alignRight="@+id/analogClock1"
          android:visibility="gone" />

    </RelativeLayout>

</LinearLayout>